# ai-readiness-audit

./: .editorconfig  .gitignore  .importlinter  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GATE_2_STRUCTURAL_REVIEW.md  GATE_3_SIGNOFF.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
contract/: parity-fixtures.json  readiness-contract.json
docs/: standard.md
eval/SPEC-2026-0701/: ac_map.yaml  gate.py
eval/acceptance/: ac_map.yaml  gate.py
scripts/: generate_contract.py  ip_grep.sh  prohibited_terms.b64
src/ai_readiness_audit/: __init__.py  config.py
src/ai_readiness_audit/adapters/: __init__.py  delivery.py  html_report.py  pdf_report.py
src/ai_readiness_audit/adapters/narration/: __init__.py  _prompt.py  claude.py  mock.py  openai_compatible.py
src/ai_readiness_audit/application/: __init__.py  assess.py  ports.py
src/ai_readiness_audit/domain/: __init__.py  banding.py  copy.py  models.py  questions.py  remediation.py  rubric.py  scoring.py
src/ai_readiness_audit/interface/: __init__.py  cli.py  sample_org.py
tests/: conftest.py  test_architecture_boundaries.py  test_contract_parity.py  test_no_upload_path.py  test_standard_foreground.py
tests/adapters/: test_advisory_forward.py  test_narration_never_scores.py  test_report_render.py  test_routing_cta.py
tests/calibration/: test_band_boundaries.py
tests/domain/: test_question_set.py  test_remediation_ordering.py  test_rubric_lock.py  test_scoring_determinism.py
tests/interface/: test_demo_mode.py
